--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "一个技术工人"
+description: "A Skilled Worker"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
